--- a/Hearthstone.ipynb
+++ b/Hearthstone.ipynb
@@ -9,11 +9,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
     "class card:\n",
+    "    def __init__(self, rank, attack, health):\n",
+    "        self.rank = rank\n",
+    "        self.attack = attack\n",
+    "        self.health = health\n",
+    "        \n",
+    "        if self.health > 0:\n",
+    "            self.live = True\n",
+    "        else:\n",
+    "            self.live = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class battlecry(card):\n",
+    "    def __init__(self, rank, attack, health, buff_attack = 0, buff_health = 0, buff_poisonous = False,\n",
+    "                 buff_shield = False, buff_windfury = False, buff_taunt = False, buff_deathrattle = False):\n",
+    "        super().__init__(rank, attack, health)\n",
+    "        self.buff_attack = buff_attack\n",
+    "        self.buff_health = buff_health\n",
+    "\n",
+    "        self.buff_poisonous = buff_poisonous\n",
+    "        self.buff_shield = buff_shield\n",
+    "        self.buff_windfury = buff_windfury\n",
+    "        self.buff_taunt = buff_taunt\n",
+    "        self.buff_deathrattle = buff_deathrattle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class deathrattle(card):\n",
+    "    def __init__(self, rank, attack, health, buff_attack = 0, buff_health = 0, buff_poisonous = False,\n",
+    "                 buff_shield = False, buff_windfury = False, buff_taunt = False, buff_deathrattle = False):\n",
+    "        super().__init__(rank, attack, health)\n",
+    "        self.buff_attack = buff_attack\n",
+    "        self.buff_health = buff_health\n",
+    "\n",
+    "        self.buff_poisonous = buff_poisonous\n",
+    "        self.buff_shield = buff_shield\n",
+    "        self.buff_windfury = buff_windfury\n",
+    "        self.buff_taunt = buff_taunt\n",
+    "        self.buff_deathrattle = buff_deathrattle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class card_old:\n",
     "    def __init__(self, mana, attack, health, buff_attack = 0, buff_health = 0, buff_poisonous = False,\n",
     "                 buff_shield = False, buff_windfury = False, buff_taunt = False, buff_deathrattle = False,\n",
     "                 poisonous = False, shield = False, windfury = False, taunt = False, deathrattle = False, others = False):\n",
@@ -44,32 +102,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
-    "asd = card(mana = 1, attack = 3, health = 5, buff_attack = 1, buff_health = 1)\n",
-    "zxc = card(mana = 1, attack = 2, health = 2, shield = True, poisonous = True)"
+    "asd = card(rank = 1, attack = 3, health = 5)\n",
+    "zxc = card(rank = 1, attack = 2, health = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asd = battlecry(rank = 1, attack = 3, health = 5, buff_poisonous = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 3, 5, 'alive', 1, 1)"
+       "(1, 3, 5, 'alive')"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "asd.mana, asd.attack, asd.health, asd.live, asd.buff_attack, asd.buff_health"
+    "asd.rank, asd.attack, asd.health, asd.live"
    ]
   },
   {
@@ -186,6 +253,260 @@
    "source": [
     "print(\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_card(card):\n",
+    "    card.rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numb_1():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|     a     |\")\n",
+    "    print(\"|   a a     |\")\n",
+    "    print(\"|     a     |\")\n",
+    "    print(\"|     a     |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "\n",
+    "def numb_2():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a        |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_3():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_4():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|     aa    |\")\n",
+    "    print(\"|    a a    |\")\n",
+    "    print(\"|   a  a    |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|      a    |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_5():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a        |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_6():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a        |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_7():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_8():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")\n",
+    "    \n",
+    "def numb_9():\n",
+    "    print(\"o --------- o\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|  a     a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"|        a  |\")\n",
+    "    print(\"|  a a a a  |\")\n",
+    "    print(\"o --------- o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o --------- o\n",
+      "|     a     |\n",
+      "|   a a     |\n",
+      "|     a     |\n",
+      "|     a     |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|        a  |\n",
+      "|  a a a a  |\n",
+      "|  a        |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|        a  |\n",
+      "|  a a a a  |\n",
+      "|        a  |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|     aa    |\n",
+      "|    a a    |\n",
+      "|   a  a    |\n",
+      "|  a a a a  |\n",
+      "|      a    |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|  a        |\n",
+      "|  a a a a  |\n",
+      "|        a  |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|  a        |\n",
+      "|  a a a a  |\n",
+      "|  a     a  |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|  a     a  |\n",
+      "|  a     a  |\n",
+      "|        a  |\n",
+      "|        a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|  a     a  |\n",
+      "|  a a a a  |\n",
+      "|  a     a  |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n",
+      "o --------- o\n",
+      "|  a a a a  |\n",
+      "|  a     a  |\n",
+      "|  a a a a  |\n",
+      "|        a  |\n",
+      "|  a a a a  |\n",
+      "o --------- o\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None, None, None, None, None, None, None)"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numb_1(), numb_2(), numb_3(), numb_4(), numb_5(), numb_6(), numb_7(), numb_8(), numb_9()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╔═══╦══════════════════════╗\n",
+      "║ 6 ║ 『祕法巨龍』卡雷苟斯 ║\n",
+      "╠═══╩══════════════════════╣\n",
+      "║   劇毒：✓    聖盾：✓     ║\n",
+      "║   風怒：✗    嘲諷：✗     ║\n",
+      "║                          ║\n",
+      "║                          ║\n",
+      "║                          ║\n",
+      "║                          ║\n",
+      "╠═════╦══════════════╦═════╣\n",
+      "║ 100 ║              ║ 100 ║\n",
+      "╚═════╩══════════════╩═════╝\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"╔═══╦══════════════════════╗\")\n",
+    "print(\"║ %d ║ %s ║\" %(6,\"『祕法巨龍』卡雷苟斯\"))\n",
+    "print(\"╠═══╩══════════════════════╣\")\n",
+    "print(\"║   劇毒：✓    聖盾：✓     ║\")\n",
+    "print(\"║   風怒：✗    嘲諷：✗     ║\")\n",
+    "print(\"║                          ║\")\n",
+    "print(\"║                          ║\")\n",
+    "print(\"║                          ║\")\n",
+    "print(\"║                          ║\")\n",
+    "print(\"╠═════╦              ╦═════╣\")\n",
+    "print(\"║ %d ║              ║ %d ║\" %(100,100))\n",
+    "print(\"╚═════╩══════════════╩═════╝\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
